// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddPlayerTurn /> renders <AddPlayerTurn /> component with origin and destination planet selected 1`] = `
.emotion-7 {
  position: relative;
  display: inline-block;
  top: 0;
  left: 0;
}

.emotion-2 {
  border-color: #acf9fb;
  z-index: 1;
  opacity: 1;
  position: absolute;
  border-style: solid;
  width: 8px;
  height: 8px;
  border-width: 1px 0 0 1px;
  top: -1px;
  left: -1px;
}

.emotion-3 {
  border-color: #acf9fb;
  z-index: 1;
  opacity: 1;
  position: absolute;
  border-style: solid;
  width: 8px;
  height: 8px;
  border-width: 1px 1px 0 0;
  top: -1px;
  right: -1px;
}

.emotion-4 {
  border-color: #acf9fb;
  z-index: 1;
  opacity: 1;
  position: absolute;
  border-style: solid;
  width: 8px;
  height: 8px;
  border-width: 0 0 1px 1px;
  bottom: -1px;
  left: -1px;
}

.emotion-5 {
  border-color: #acf9fb;
  z-index: 1;
  opacity: 1;
  position: absolute;
  border-style: solid;
  width: 8px;
  height: 8px;
  border-width: 0 1px 1px 0;
  bottom: -1px;
  right: -1px;
}

.emotion-6 {
  border: 1px solid #acf9fb;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px 16px;
  cursor: pointer;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  position: relative;
  background-color: rgba(6,43,45,0.65);
  color: #acf9fb;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  font-family: Arial,sans-serif;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  z-index: 2;
}

.emotion-6:focus {
  outline: none;
}

.emotion-1 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-0 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  background: #fff;
  border-radius: 2px;
  border: 1px solid #E6E6E6;
  display: block;
  width: 100%;
  text-align: left;
  margin: 8px 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: calc(8px + 1px);
  outline: none;
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(0,113,194,0.3);
  border-color: #0071C2;
  border-radius: 2px;
}

<div>
  <div>
    <h2>
      test
       turn
    </h2>
    <legend>
      Sending fleet from 
      A
       to 
      B
      . Select amount:
    </legend>
    <div
      class="emotion-1"
    >
      <input
        class="emotion-0"
        data-testid="order-amount"
        type="number"
        value="10"
      />
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-2"
      />
      <div
        class="emotion-3"
      />
      <div
        class="emotion-4"
      />
      <div
        class="emotion-5"
      />
      <button
        class="emotion-6"
        type="button"
      >
        Add order
      </button>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-2"
      />
      <div
        class="emotion-3"
      />
      <div
        class="emotion-4"
      />
      <div
        class="emotion-5"
      />
      <button
        class="emotion-6"
        type="button"
      >
        Cancel order
      </button>
    </div>
  </div>
</div>
`;

exports[`<AddPlayerTurn /> renders <AddPlayerTurn /> component with origin planet selected 1`] = `
.emotion-5 {
  position: relative;
  display: inline-block;
  top: 0;
  left: 0;
}

.emotion-0 {
  border-color: #acf9fb;
  z-index: 1;
  opacity: 1;
  position: absolute;
  border-style: solid;
  width: 8px;
  height: 8px;
  border-width: 1px 0 0 1px;
  top: -1px;
  left: -1px;
}

.emotion-1 {
  border-color: #acf9fb;
  z-index: 1;
  opacity: 1;
  position: absolute;
  border-style: solid;
  width: 8px;
  height: 8px;
  border-width: 1px 1px 0 0;
  top: -1px;
  right: -1px;
}

.emotion-2 {
  border-color: #acf9fb;
  z-index: 1;
  opacity: 1;
  position: absolute;
  border-style: solid;
  width: 8px;
  height: 8px;
  border-width: 0 0 1px 1px;
  bottom: -1px;
  left: -1px;
}

.emotion-3 {
  border-color: #acf9fb;
  z-index: 1;
  opacity: 1;
  position: absolute;
  border-style: solid;
  width: 8px;
  height: 8px;
  border-width: 0 1px 1px 0;
  bottom: -1px;
  right: -1px;
}

.emotion-4 {
  border: 1px solid #acf9fb;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px 16px;
  cursor: pointer;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  position: relative;
  background-color: rgba(6,43,45,0.65);
  color: #acf9fb;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  font-family: Arial,sans-serif;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  z-index: 2;
}

.emotion-4:focus {
  outline: none;
}

<div>
  <div>
    <h2>
      test
       turn
    </h2>
    <div>
      Please select destination planet
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-0"
      />
      <div
        class="emotion-1"
      />
      <div
        class="emotion-2"
      />
      <div
        class="emotion-3"
      />
      <button
        class="emotion-4"
        type="button"
      >
        Cancel order
      </button>
    </div>
  </div>
</div>
`;

exports[`<AddPlayerTurn /> renders <AddPlayerTurn /> component without any selected planets 1`] = `
<div>
  <div>
    <h2>
      test
       turn
    </h2>
    <div>
      Please select origin planet
    </div>
  </div>
</div>
`;
